# Hausdorff

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake
src/app/: CMakeLists.txt  main.cpp
src/bvh/: CMakeLists.txt  aabb.cpp  bvh.cpp  bvh.h  nearest_query.cpp  nearest_query.h
src/core/: CMakeLists.txt
src/core/common/: conf.h  log_helper.h  n_matrix.h
src/core/geometry/: bbox.hpp  primitive_dis.cpp  primitive_dis.hpp
src/core/util/: timer.hpp  util.hpp
src/hausdorff/: CMakeLists.txt  closest_cache.hpp  face_base_travel_trait.cpp  face_base_travel_trait.hpp  hausdorff.cpp  hausdorff.h  hausdorff_internal.h  hausdorff_util.cpp  point_base_hausdorff_trait.cpp  stop_condition.h  triangle_base_hausdorff.cpp
src/io/: CMakeLists.txt  io.cpp  io.h
src/mesh/: CMakeLists.txt  adjacent_table.cpp  adjacent_table.hpp  definition.hpp  mesh.hpp  mesh_util.hpp
